# claml

./: .gitignore  .ocamlformat  Makefile  README.md  bootstrap.sh  build.sh  claml.opam  clang.opam  opam
.github/workflows/: build.yml
config/: archives.sexp  cflags.sexp  ldflags.sexp
src/: Makefile  attrKind.ml  binaryOperatorKind.ml  builtinTypeKind.ml  characterKind.ml  clang.ml  clang_ocaml.cpp  clang_type.cpp  declKind.ml  dune  implicitCastKind.ml  sig.ml  stmtKind.ml  typeKind.ml  unaryOperatorKind.ml  utils.cpp  utils.h
test/: UL0.expected  __int128_t0.expected  __uint128_t0.expected  alignof0.expected  anonymous-struct0.expected  anonymous-struct1.expected  anonymous-struct2.expected  array-init0.expected  array-subscript0.expected  array-subscript1.expected  array-subscript2.expected  attr-stmt0.expected  attribute0.expected  attribute1.expected  binary_operator.expected  binop0.expected  block0.expected  cast0.expected  cast1.expected  comma0.expected  comma1.expected  compound-literal0.c  compound-literal0.expected  decl0.expected  designated-init0.expected  designated-init1.expected  dune  duplicated-label0.expected  duplication0.expected  enum0.expected  enum1.expected  enum2.expected  function0.expected  global-array0.expected  goto0.expected  goto1.expected  goto2.expected  goto3.expected  if0.expected  if1.expected  (+85 more)
test/decls/: dune  test.ml
test/rewriter/: dune  simple.c  simple.expected  test.ml
